# FlukeNIC

./: .gitignore  .gitmodules  README.md
firmware/: Makefile  README.md  sdkconfig
firmware/main/: CMakeLists.txt  Kconfig.projbuild  dataout.c  dataout.h  dir_footer.html  dir_header.html  file_server.c  file_server.h  fluke.c  fluke.h  idf_component.yml  logger.c  logger.h  main.c  mount.c  nettime.c  nettime.h  ota.h  rtc_pcf2129.c  settings.c  settings.h  settings_header.html  webserver.c  webserver.h  wifi.c  wifi.h
firmware/main/spiffs_root/: info.html  measure.html  sidebar.html  styles.css
hardware/: BOM.xlsx  PartsLocation.pptx
hardware/eagle/: ESP32.lbr  FlukeNic.lbr  FlukeNic_UNITA.brd  FlukeNic_UNITA.sch  FlukeNic_UNITB.brd  FlukeNic_UNITB.sch
software/: CMakeLists.txt  partitions.csv
software/main/: dir_header.html  fluke.c  fluke.h  logger.c  mount.h  ota.c  rtc_pcf2129.c  rtc_pcf2129.h  settings.c  settings.h  simple_ota.html  webserver.h
software/main/spiffs_root/: info.html  measure.html  styles.css
